# GithubCopilotLibrary

./: .gitignore  API.md  INTEGRATION.md  README.md  pyproject.toml
src/copilotlibrary/: __init__.py  cli.py  client.py  embeddings.py  models.py  repl.py
tests/: manual_test.py  test_cli.py  test_client.py  test_embeddings_live.py  test_integrated_embeddings.py  test_new_features.py
